btn overlap issue fixed

--- a/app/scss/_btn-help.scss
+++ b/app/scss/_btn-help.scss
@@ -1,2 +1,6 @@
 #btn-help {
+	@extend .btn, .btn-primary, .btn-sm;
+	svg {
+		color: $gold-light;
+	}
 }
